# CMI-detect-behavior

./: .gitignore  cmi-2025-demo-submission.ipynb  ideas.md  imu-tof-thm-fusion-with-physics-fe-mixup-lb0-8.ipynb  imu_only_training.ipynb  imu_processing_kaggle.ipynb  imu_scores.md  imu_tof_inference.ipynb  imu_tof_memory.ipynb  kaggle_notebook.ipynb  main.ipynb  next_steps.md  pyproject.toml  results_log.txt  scores.md  scratch.ipynb  submission.parquet  tof_cols_cv.ipynb  tof_processing_kaggle.ipynb  train_experiments.ipynb  train_experiments_adv_phys_basic_tof.ipynb  train_experiments_fe_nn truly.ipynb  train_experiments_fe_nn.ipynb  train_experiments_tof_gate.ipynb
src/: clean_raw_data.py  constants.py  functions.py  imu_cross_modal_feats.py  imu_kaggle.py  imu_physics_feats.py  imu_rolling_stats.py  kaggle_notebook_feats.py  merge_all_feats.py  merge_feats_dynamic.py  metric.py  nn_blocks.py  physics_feats.py  sampling_rate.py  thm_feats_first.py  tof_advanced_fe.py  tof_feats.py
